Fix dark mode for event banner
Fixes #167

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -270,7 +270,9 @@ select:focus {
 }
 
 #wpad-notice p,
-#wpad-archive p {
+#wpad-archive p,
+#wpad-notice a,
+#wpad-archive a {
 	color: var(--bg);
 }
 
